--- a/app/src/main/res/values-sl-rSI/strings.xml
+++ b/app/src/main/res/values-sl-rSI/strings.xml
@@ -27,7 +27,7 @@ Preprosto: izberite želeno spremembo :)\n
     <string name="force_widescreen_text">Prisili Široki zaslon</string>
     <string name="media_notification_duration_to">Trajanje medijskih opozoril</string>
     <string name="bluetooth_auto_connect">Samodejna povezava Bluetooth-a</string>
-    <string name="tutorial_nospeed">Popravek omogoči, da Android Auto misli, da je hitrost avtomobila 0. Zaradi tega Android Auto bo vedno pokazal predogled sporočil. Popravek ne velja za tipkovnico ali ob prvi nastavitvi Android Auto.</string>
+    <string name="tutorial_nospeed">Popravek omogoči, da Android Auto misli, da je hitrost avtomobila enaka 0. Zaradi tega Android Auto bo vedno pokazal predogled sporočil. Popravek ne velja za tipkovnico ali ob prvi nastavitvi Android Auto.</string>
     <string name="tutorial_sixtap">Popravek preglasi limito 6 tapkanj v Android Auto in omogoči neomejeno brskanje vsebine.</string>
     <string name="tutorial_shortcuts">Popravek bo odklenil novo funkcijo Asistentove Povezave. Ko je enkrat vklopljen lahko greste v Android Auto nastavitve in v prilagoditvah zaganjalnika
     lahko začnete dodajati hitre povezave ukazom Google Asistenta</string>
@@ -124,8 +124,16 @@ OPOZORILO: Popravka ni še bilo mogoče obširno testirati, zato lahko pride do 
     <string name="remove_paired_car">Odstrani povezan avto</string>
     <string name="choose_cars">Izberite avto/e</string>
     <string name="tutorial_carremover">Ali ste vedeli, da je iz Android Auto programa mogoče odstraniti le vse avte na enkrat, ne pa vsakega posamezno? Ta funkcija vam pride na pomoč: izberite avte, ki jih hočete odstraniti iz Android Auto in samo izbrani bodo odstranjeni.</string>
-    <string name="custom_startup_option">Custom boot option</string>
-    <string name="tutorial_custom_startup_option">This tweak will activate a new option inside Android Auto\'s settings that will let the user set what to open when Android Auto is started. You can choose to open latest navigation app, latest music app or just the launcher. Android Auto 6.8 or superior is required.</string>
-    <string name="custom_hotseat_option">Custom seating option</string>
-    <string name="tutorial_hotseat_option">This tweak will activate a new option inside Android Auto\'s settings that will let the user decide whether the driving position is left or right so that Android Auto can adapt its UI. Android Auto 6.9 or superior is required.</string>
+    <string name="custom_startup_option">Možnosti za zagon po meri</string>
+    <string name="tutorial_custom_startup_option">Popravek aktivira novo možnost v nastavitvah Android Auto, katera dopusti uporabniku, da sam nastavi katero aplikacijo odpreti ob zagonu. Izberete lahko najnovejšo navigacijo, glasbeni predvajalnik, ali preprosto zaganjalnik. Potrebno je posodobiti Android Auto na verzijo 6.8 ali kasnejšo.</string>
+    <string name="custom_hotseat_option">Možnosti prilagajanja sedeža</string>
+    <string name="tutorial_hotseat_option">Popravek bo omogočil novo možnost v nastavitvah Android Auto, ki omogoči uporabniku, da izbere ali je voznikov sedež na levi ali desni strani vozila. Na ta način Android Auto lahko boljše prilagodi uporabniški vmesnik (UI). Potrebna verzija Android Auto 6.9 ali višja.</string>
+    <string name="tutorial_coolwalk">This tweak will activate a new design in Android Auto (codename Codewalk) that can be toggled in Android Auto\'s settings and that tweaks a bit the appearance on smaller screens. This design features a always on side panel and some different graphics. This feature is in early stage at the moment. Android Auto 6.9 or superior is required.</string>
+    <string name="coolwalk_tweak">Coolwalk design</string>
+    <string name="tutorial_focus_settings">This tweak will activate a new options in Android Auto settings to manually customize whether Android Auto must be launched as soon as you connect your phone with the car. Android Auto 6.8 or superior is required.</string>
+    <string name="focus_tweak">Focus settings</string>
+    <string name="casting_app">Casting app</string>
+    <string name="tutorial_mirroring_app">This mysterious app is bundled starting from Android Auto 7.1 and it\'s supposedly a screen mirroring app, probably destined to passenger\'s Android Auto. Might not function properly.</string>
+    <string name="decline_message_tweak">Decline with message</string>
+    <string name="tutorial_decline_message">This tweak will enable the possibility to decline an incoming call with pre-made SMS.</string>
 </resources>
