--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -43,9 +43,9 @@ IT\'S NOT POSSIBLE TO SET A SPECIFIC APP TO START FIRST.</string>
     <string name="tutorial_hun">Este ajustes permite que você defina uma duração personalizada para notificações heads up</string>
     <string name="tutorial_media_hun">Este ajuste permite que você defina um período personalizado para as notificações de mídia na barra de navegação até 15 minutos.</string>
     <string name="tutorial_bluetooth">Este ajuste deve impedir que o Bluetooth seja ativado quando o Android Auto estiver conectado. Isto não funcionará se o Bluetooth já estiver ligado.</string>
-    <string name="tutorial_patchapps">This tweak will enable third-party apps made specifically with Android Auto custom SDK to work on Android Auto.\n
-If you are familiar with AA Phenotype Patcher, this tweak is pretty much identical to it.\n
-It\'s not possible to add just any app to Android Auto, but it\'s possible to patch sideloaded apps MADE FOR ANDROID AUTO to work in cars.</string>
+    <string name="tutorial_patchapps">Esse \"truque\" irá habilitar aplicativos de terceiros feitos especificamente com o SDK modificado Android Auto.\n
+Se você é familiar com o AA Phenotype Patcher, esse \"truque\" é quase idêntico com ele.\n
+Não é possível adicionar qualquer app ao Android Auto, mas é possível adicionar aplicativos FEITOS PARA ANDROID AUTO para funcionar em carros.</string>
     <string name="multi_display_string">Visualização múltipla</string>
     <string name="tutorial_multidisplay">This is an hidden feature inside Android Auto that will turn the second space in widescreen mode to a real second display that is completely taken by another activity. Google Maps will display a full map with navigation status, music and phones will take the full space.\n
         Additionally, this mode activates another feature that will turn the phone\'s screen in a second display for navigation in Android Auto.\n
@@ -53,39 +53,39 @@ It\'s not possible to add just any app to Android Auto, but it\'s possible to pa
         Apparently, only Google Maps currently support this mode.\n
         This feature is probably under development and could potentially not work as intended.\n
     Android Auto 5.8 or superior is required.</string>
-    <string name="battery_warning">Battery saver warning</string>
-    <string name="tutorial_battery_saver_warning">This tweak will prevent Android Auto from giving popup warnings when battery saver mode is on</string>
-    <string name="disable_tweak_string">Disable\u0020</string>
-    <string name="enable_tweak_string">Enable\u0020</string>
-    <string name="re_enable_tweak_string">Re-enable\u0020</string>
-    <string name="copy_log">Copy log</string>
-    <string name="about">About</string>
-    <string name="revert_everything">Revert everything</string>
-    <string name="force_disable_tweak">Force Disable\u0020</string>
-    <string name="reset_tweak">Reset\u0020</string>
-    <string name="force_widescreen_warning">Force widescreen has been automatically disabled</string>
-    <string name="force_disable_widescreen_warning">Force disable widescreen has been automatically disabled</string>
-    <string name="set_value">Set\u0020</string>
-    <string name="reboot_to_apply">REBOOT TO APPLY</string>
-    <string name="warning_title">WARNING</string>
-    <string name="unpatch">Unpatch\u0020</string>
-    <string name="patch_app">Patch\u0020</string>
-    <string name="default_string">\u0020Default</string>
-    <string name="app_list_label">Apps List</string>
-    <string name="translators_button">Translated by</string>
-    <string name="about_part_one"><![CDATA[AA AIO TWEAKER is developed and maintained by Shmykelsa.<br><br>Source code is available on <a href=\"https://github.com/shmykelsa/AA-Tweaker\">GitHub</a><br><br>]]></string>
-    <string name="about_part_two"><![CDATA[If you really like my work, please consider a donation.<br> You can donate me through <a href=\"http://www.paypal.me/grizzo96\">PayPal</a> or you can copy my Bitcoin address with the button down below.<br><br>Even a small amount will be much appreciated :)]]></string>
-    <string name="copied_address_toast">BTC Address copied to clipboard</string>
-    <string name="custom_wallpapers">Wallpapers</string>
-    <string name="tutorial_wallpapers">This tweak will activate the new built in wallpaper changer in Android Auto. Android Auto 5.8 or superior is required.\nWARNING: If you are a user of Wallpapers For Android Auto, you will need to update it to at least version 3.0, otherwise this tweak will break Wallpapers For Android Auto functionality.</string>
-    <string name="tutorial_dark_mode">Starting from December 2020, Google reverted a behaviour that happened since Android 10. Previously, the light/dark mode on Android Auto followed the light/dark mode on the phone and vice versa. This meant that switching the phone to dark mode had effect on the car, or if the phone was in dark mode and the car had lights off it used to switch on the light theme on the phone.\n However, since this feature of \"independent\" dark mode was introduced, users with Aftermarket headunits have no way to switch to dark mode anymore without actually wiring the stereo to the car\'s lights.\n This tweak makes sure that night mode is again dependent from phone and switching light/dark mode on phone will have its effects on cars too.</string>
-    <string name="dark_mode_tweak">independent dark mode</string>
-    <string name="telemetry_string">telemetry</string>
-    <string name="tutorial_telemetry">It\'s no mystery that Google logs a lot of datas about us. This tweak will make so that Google Play Services will stop a lot of tracking and logging activity.\n
-WARNING: This tweak has not been extensively tested and could potentially break Android Auto. If you find out that this tweak breaks Android Auto, please open an issue on GitHub.</string>
-    <string name="reboot_prompt">Reboot phone now?</string>
-    <string name="rebooting_action">Rebooting…</string>
-    <string name="negative_button">cancel</string>
+    <string name="battery_warning">Aviso de Economia de bateria</string>
+    <string name="tutorial_battery_saver_warning">Este ajuste irá impedir que o Android dê avisos popup quando o modo de economia de bateria estiver ativado</string>
+    <string name="disable_tweak_string">Desativar\u0020</string>
+    <string name="enable_tweak_string">Ativar\u0020</string>
+    <string name="re_enable_tweak_string">Reativar\u0020</string>
+    <string name="copy_log">Copiar log</string>
+    <string name="about">Sobre</string>
+    <string name="revert_everything">Reverter tudo</string>
+    <string name="force_disable_tweak">Forçar Desativação\u0020</string>
+    <string name="reset_tweak">Resetar\u0020</string>
+    <string name="force_widescreen_warning">Forçar tela widescreen automaticamente foi desativado</string>
+    <string name="force_disable_widescreen_warning">Forçar o desligamento da tela widescreen foi desativado automaticamente</string>
+    <string name="set_value">Definir\u0020</string>
+    <string name="reboot_to_apply">REINICIAR PARA APLICAR</string>
+    <string name="warning_title">ATENÇÃO</string>
+    <string name="unpatch">Desfazer a correção\u0020</string>
+    <string name="patch_app">Corrigir\u0020</string>
+    <string name="default_string">\u0020Padrão</string>
+    <string name="app_list_label">Lista de aplicativos</string>
+    <string name="translators_button">Traduzido por</string>
+    <string name="about_part_one"><![CDATA[A AA AIO TWEAKER é desenvolvida e mantida por Shmykelsa.<br><br>O código-fonte está disponível no <a href=\"https://github.com/shmykelsa/AA-Tweaker\">GitHub</a><br><br>]]></string>
+    <string name="about_part_two"><![CDATA[Se você gosta mesmo do meu trabalho, considere uma doação.<br> Você pode me doar através do <a href=\"http://www.paypal.me/grizzo96\">PayPal</a> ou você pode copiar meu endereço Bitcoin com o botão abaixo.<br><br>Mesmo uma pequena quantia será muito apreciada :)]]></string>
+    <string name="copied_address_toast">Endereço BTC copiado para a área de transferência</string>
+    <string name="custom_wallpapers">Papeis de parede</string>
+    <string name="tutorial_wallpapers">Este ajuste ativará o novo seletor de papel de parede construído no Android Auto. Android Auto 5.8 ou superior é necessário.\nAVISO: Se você é um usuário de papéis de parede para Android Auto, precisará atualizá-lo para pelo menos a versão 3., Caso contrário, este ajustes irá quebrar papéis de parede para a funcionalidade do Android Auto.</string>
+    <string name="tutorial_dark_mode">A partir de dezembro de 2020, a Google reverteu um comportamento que aconteceu desde o Android 10. Anteriormente, o modo claro/escuro no Android Auto seguiu o modo claro / escuro no telefone e vice-versa. Isto significava que a opção do telefone para o modo escuro teve efeito no carro, ou se o telefone estava em modo escuro e o carro tinha luzes apagadas para ligar o tema claro no telefone.\n No entanto, desde que esse recurso de modo \"independente\" foi introduzido, usuários com cabeças de pós-mercado não têm maneira de alternar para o modo escuro mais sem fazer fiação do estéreo para as luzes do carro.\n Este ajustes certifica-se de que o modo noturno é de novo dependente do telefone e ativar o modo claro/escuro no telefone também terá seus efeitos nos carros também.</string>
+    <string name="dark_mode_tweak">modo escuro independente</string>
+    <string name="telemetry_string">telemetria</string>
+    <string name="tutorial_telemetry">Não é um mistério que o Google registra muitos dados sobre nós. Este ajuste fará com que o Google Play Services pare muitos rastreamento e registros.\n
+AVISO: este ajuste não foi extensivamente testado e pode potencialmente danificar o Android Auto. Se você descobrir que este ajustes quebra o Android Auto, por favor abra um problema no GitHub.</string>
+    <string name="reboot_prompt">Reiniciar o dispositivo agora?</string>
+    <string name="rebooting_action">Reiniciando…</string>
+    <string name="negative_button">cancelar</string>
     <string name="added_app_action">"Added: "</string>
     <string name="removed_app_action">Removed\u0020</string>
     <string name="root_access_warning">Root access denied. Please allow root access.</string>
@@ -128,4 +128,12 @@ WARNING: This tweak has not been extensively tested and could potentially break 
     <string name="tutorial_custom_startup_option">This tweak will activate a new option inside Android Auto\'s settings that will let the user set what to open when Android Auto is started. You can choose to open latest navigation app, latest music app or just the launcher. Android Auto 6.8 or superior is required.</string>
     <string name="custom_hotseat_option">Custom seating option</string>
     <string name="tutorial_hotseat_option">This tweak will activate a new option inside Android Auto\'s settings that will let the user decide whether the driving position is left or right so that Android Auto can adapt its UI. Android Auto 6.9 or superior is required.</string>
+    <string name="tutorial_coolwalk">This tweak will activate a new design in Android Auto (codename Codewalk) that can be toggled in Android Auto\'s settings and that tweaks a bit the appearance on smaller screens. This design features a always on side panel and some different graphics. This feature is in early stage at the moment. Android Auto 6.9 or superior is required.</string>
+    <string name="coolwalk_tweak">Coolwalk design</string>
+    <string name="tutorial_focus_settings">This tweak will activate a new options in Android Auto settings to manually customize whether Android Auto must be launched as soon as you connect your phone with the car. Android Auto 6.8 or superior is required.</string>
+    <string name="focus_tweak">Focus settings</string>
+    <string name="casting_app">Casting app</string>
+    <string name="tutorial_mirroring_app">This mysterious app is bundled starting from Android Auto 7.1 and it\'s supposedly a screen mirroring app, probably destined to passenger\'s Android Auto. Might not function properly.</string>
+    <string name="decline_message_tweak">Decline with message</string>
+    <string name="tutorial_decline_message">This tweak will enable the possibility to decline an incoming call with pre-made SMS.</string>
 </resources>
